[gd_scene load_steps=2 format=3 uid="uid://b66axco78eg13"]

[ext_resource type="Script" uid="uid://fnis3j3y2jtd" path="res://Scripts/options.gd" id="1_prnvy"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_prnvy")

[node name="ReturnToGame" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = 74.0
offset_right = 308.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
text = "Return to Game"

[node name="ExitToMenu" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -245.5
offset_top = 119.0
offset_right = 245.5
offset_bottom = 209.0
grow_horizontal = 2
text = "Exit to Menu"

[connection signal="pressed" from="ReturnToGame" to="." method="_on_return_to_game_pressed"]
[connection signal="pressed" from="ExitToMenu" to="." method="_on_exit_to_menu_pressed"]
